# hiva-ijca

./: README.md  eval.py  eval_hotpot.py  finetune_squadv2.py  pyproject.toml
baseline/: README.md  run_eval.sh  run_squad.sh
baseline/evaluation/: best_thresh_results.json  get_log.py  squadv2_eval.py  tensorboard_log.json
baseline/runs/: get_log.py
baseline/runs/Aug22_11-34-07_69d628c65bfc/: events.out.tfevents.1755862447.69d628c65bfc
data/: .gitignore
data/hotpotqa/: README.md  prepare.py
data/squadv2/: README.md  prepare.py
evaluation/: na_prob.json  predictions.json  predictions.py
hotpot/: finetune_hotpot_qa.py
transformers/examples/legacy/question-answering/: run_squad_baseline.py
transformers/src/transformers/models/distilbert/: club.py  modeling_distilbert.py
